# algo-practice

./: .gitignore  Cargo.toml  ruff.toml
src/leetcode/1.two_sum/: two_sum.py  two_sum.rs
src/leetcode/121.best_time_to_buy_and_sell_stock/: best_time_to_buy_and_sell_stock.py  best_time_to_buy_and_sell_stock.rs
src/leetcode/125.valid_palindrome/: valid_palidrome.py  valid_palidrome.rs
src/leetcode/1550.three_consecutive_odds/: three_consecutive_odds.py  three_consecutive_odds.rs
src/leetcode/242.valid_anagram/: valid_anagram.py  valid_anagram.rs
src/leetcode/28.find_the_index_of_the_first_occurrence_in_a_string/: find_the_index_of_the_first_occurrence_in_a_string.py  find_the_index_of_the_first_occurrence_in_a_string.rs
src/leetcode/383.ransom_note/: ransom_note.py  ransom_note.rs
src/leetcode/88.merge_sorted_array/: merge_sorted_array.py  merge_sorted_array.rs
