bin = [
    { name = "leetcode_1_two_sum", path = "src/leetcode/1.two_sum/two_sum.rs" },
    { name = "leetcode_121_best_time_to_buy_and_sell_stock", path = "src/leetcode/121.best_time_to_buy_and_sell_stock/best_time_to_buy_and_sell_stock.rs" },
    { name = "leetcode_88_merge_sorted_array", path = "src/leetcode/88.merge_sorted_array/merge_sorted_array.rs" },
    { name = "leetcode_28_find_the_index_of_the_first_occurrence_in_a_string", path = "src/leetcode/28.find_the_index_of_the_first_occurrence_in_a_string/find_the_index_of_the_first_occurrence_in_a_string.rs"}
]
[package]
name = "algo-practice"
version = "1.0.0"
edition = "2021"

# Don't publish  on crates.io!
publish = false

[dependencies]

[profile.dev]
panic = "unwind" # Stack trace for easier debugging
debug = true     # Keep debug symbols for easier inspection

[lints.rust]
unsafe_code = "forbid"
unstable_features = "forbid"
dead_code = "allow"

[lints.clippy]
# You forgot a `todo!()`!
todo = "forbid"
# No infinite loops are needed.
infinite_loop = "deny"
# You shouldn't leak memory
mem_forget = "deny"
# Dead code warnings 
dead_code = "allow"
